k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: nuxt-app
          image: 203196628570.dkr.ecr.eu-west-1.amazonaws.com/kubernetes/test:latest

          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"      # "I need at least 5% of a CPU core to start"
              memory: "32Mi"
            limits:
              cpu: "500m"      # "Don't let me use more than 50% of a core"
              memory: "128Mi"
